--- a/metals.html
+++ b/metals.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Metal Rates</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="metals.js"></script>
-</head>
     <style>
     .watermark {
         position: fixed;
@@ -18,6 +12,12 @@
         pointer-events: none; /* Prevents interaction */
     }
 </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Live Metal Rates</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="metals.js"></script>
+</head>
 <body>
     <div class="container">
         <h1>Live Gold, Silver, Platinum, Copper & Diamond Rates</h1>
@@ -45,6 +45,6 @@
             </tbody>
         </table>
     </div>
-    <div class="watermark">© 2025 Aditya Akella</div>
+    <div class="watermark">By Aditya Akella</div>
 </body>
 </html>
